test_regress/t/t_display_bad.out
%Error: t/t_display_bad.v:12:5: Missing arguments for $display-like format
   12 |     $display("%x");   
      |     ^~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_display_bad.v:14:5: Unknown $display-like format code: '%q'
   14 |     $display("%q");   
      |     ^~~~~~~~
%Error: Exiting due to
